--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Propharm - Farmácia Online | Vitaminas e Suplementos em Angola</title>
+    <title>SANEP VIDA - Indústria Farmacêutica</title>
     <meta name="description" content="Propharm é a sua farmácia online em Luanda, Angola. Encontre vitaminas, suplementos, produtos de saúde e bem-estar com entrega rápida." />
     <meta name="author" content="Propharm" />
     <meta name="keywords" content="farmácia online, vitaminas, suplementos, saúde, Angola, Luanda, Propharm" />
 
-    <meta property="og:title" content="Propharm - Farmácia Online | Vitaminas e Suplementos" />
-    <meta property="og:description" content="Propharm é a sua farmácia online em Luanda, Angola. Encontre vitaminas, suplementos e produtos de saúde." />
+    <meta property="og:title" content="SANEP VIDA - Indústria Farmacêutica" />
+    <meta property="og:description" content="Sanep Vida é a sua farmácia online em Luanda, Angola. Encontre vitaminas, suplementos e produtos de saúde." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Propharm - Farmácia Online" />
     <meta name="twitter:description" content="Farmácia online em Angola com vitaminas, suplementos e produtos de saúde." />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" href="src/assets/img/favicon.png" sizes="32x32" />
     
-    <link rel="canonical" href="https://propharm.ao" />
   </head>
 
   <body>
